page d'accueil version mobile fixe faite

--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -5,7 +5,8 @@ body {
 }
 
 .bloc-page {
-    width: 375px;
+    min-width: 320px;
+    max-width: 882px;
     display: flex;
     flex-direction: column;
     align-items: center;
