--- a/scss/layout/_elements.scss
+++ b/scss/layout/_elements.scss
@@ -1,3 +1,56 @@
+header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+}
+
+.nav {
+    background-color: #f6f6f6;
+    &_geoloc {
+        background-color: #eaeaea;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & p {
+            padding-left: 60px;
+        }
+        &_icone {
+            font-size: 1.3rem;
+        }
+        & input {
+            border: none;
+            background-color: #eaeaea;
+            margin-left: 15px;
+            font-family: 'Roboto Bold';
+            font-size: 1rem;
+        }
+    }
+    &_introduction {
+        background-color: #f6f6f6;
+        height: 285px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        text-align: center;
+        & h2 {
+            font-size: 1.5em;
+            margin-bottom: 0;
+        }
+    }
+}
+
+#btn-explore {
+    color: white;
+    background-image: linear-gradient(to left top, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    padding: 15px 20px;;
+    border-radius: 2em;
+    font-family: 'Roboto Bold';
+}
+
 .guidelines {
     background-color: white;
     width: 100%;
@@ -10,8 +63,6 @@
     &_bloc {
         background-color: #f6f6f6;
         position: relative;
-        //display: flex;
-        //align-items: center;
         width: 325px;
         height: 75px;
         border-radius: 1em;
@@ -45,8 +96,12 @@
 .restaurants {
     background-color: #f6f6f6;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+    padding-bottom: 45px;
+    &_box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .restaurant-link {
@@ -104,9 +159,18 @@
         justify-self: center;
         align-self: center;
         grid-row: 1;
-    grid-column: 3;
+        grid-column: 3;
+        color: #9356dc;
+        background:-moz-linear-gradient(top, #9356dc 0%, #ff79da 100%); 
+        background: -webkit-linear-gradient(top, #9356dc 0%,#ff79da 100%); 
+        background: linear-gradient(to bottom, #9356dc 0%,#ff79da 100%);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+       -webkit-text-fill-color:transparent;
+        }
     }
-}
+
 
 .new-tag {
     font-family: 'Roboto Bold';
@@ -117,7 +181,38 @@
     position: absolute;
     top: 12px;
     right: 12px;
+    -webkit-box-shadow: 0px 3px 15px 0px rgba(160,160,160,0.85); 
+    box-shadow: 0px 3px 15px 0px rgba(160,160,160,0.85);
 }
+
+footer {
+    background-color: #353535;
+    color: white;
+    height: 198px;
+    & a {
+        color: white;
+    }
+}
+
+.footer {
+    margin: 30px 0 0 25px;
+    &_heading {
+        margin-bottom: 25px;
+    }
+    &_nav {
+        font-size: 0.9em;
+        & p {
+            margin-bottom: 10px;
+        }
+    }
+    &_icone {
+        font-size: 0.7em;
+        margin-right: 10px;
+        max-width: 10px;
+    }
+}
+
+
 
 
     
